tests/NormalTests/paczka1/small_fuzzy/48603412.err
Error in line 5: 4l0tfbfaiwI A667 43,7
Error in line 7: 4l0tfbfaiwI A36 62,7
Error in line 14: A667 A36 60,72
